Fix footer alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -431,7 +431,7 @@ footer
 {
 	display: flex;
 	flex-flow: row wrap;
-	justify-content: center;
+	justify-content: space-between;
 	padding: 10px;
 	background-color: #444;
 }
